Added userInput for range

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -13,8 +13,13 @@
   </header>
 
   <main>
+    <section id="defineRange">
+      <input type="number" id="minRange" placeholder="Enter a minimum number" />
+      <input type="number" id="maxRange" placeholder="Enter a maximum number" />
+    </section>
+
     <section id="mainGame">
-      <input type="text" id="userGuess" placeholder="Enter your Guess" />
+      <input type="number" id="userGuess" placeholder="Enter your guess" />
       <button id="guessButton" class="submitButtons">Guess</button>
       <button id="clearButton" class="submitButtons">Clear</button>
     </section>
