added css for button states - not working 100%

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -26,8 +26,7 @@
 
     <section id="gameResults">
       <p id="lastGuessMessage"></p>
-      <p id="userGuessValue"></p> <!--This value is a filler value, will be replaced with js-->
-      <p id="gameResponse"></p>  <!--This value is a filler value, will be replaced with js-->
+      <p id="userGuessValue"></p> 
     </section>
   </main>
 
