Readded p#gameResponse.  Somehow it was deleted.

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -26,7 +26,8 @@
 
     <section id="gameResults">
       <p id="lastGuessMessage"></p>
-      <p id="userGuessValue"></p> 
+      <p id="userGuessValue"></p>
+      <p id="gameResponse"></p> 
     </section>
   </main>
 
