Add media screen for mobile viewing

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -4,6 +4,7 @@
 <title>numberGuesser</title>
 <link rel ="stylesheet" href="numberGuesser.css" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -13,13 +14,16 @@
   </header>
 
   <main>
-    <section id="defineRange">
+    <section id="instructions">
       <p>Instructions</p>
       <p>Enter a minimum and maximum value and a random number will be generated within that range</p>
       <p>The random number will be the minimum value, the maximum value or any whole number in between.</p>
       <p>If you guess the random number correctly, the range will automatically increase</p>
-      <input type="number" id="minRange" placeholder="Enter a minimum number" />
-      <input type="number" id="maxRange" placeholder="Enter a maximum number" />
+    </section>
+
+    <section id="defineRange">
+      <input type="number" class="rangeButtons" id="minRange" placeholder="MIN" />
+      <input type="number" class="rangeButtons" id="maxRange" placeholder="MAX" />
     </section>
 
     <section id="mainGame">
