Add instructions to user

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -15,10 +15,10 @@
 
   <main>
     <section id="instructions">
-      <p>Instructions</p>
-      <p>Enter a minimum and maximum value and a random number will be generated within that range</p>
-      <p>The random number will be the minimum value, the maximum value or any whole number in between.</p>
-      <p>If you guess the random number correctly, the range will automatically increase</p>
+      <button id="instructionButton">Get Instructions</button>
+      <p id="instruction1"></p>
+      <p id="instruction2"></p>
+      <p id="instruction3"></p>
     </section>
 
     <section id="defineRange">
