--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -14,7 +14,7 @@
   </header>
 
   <main>
-    <section id="instructions" aria-label="Insturction section">
+    <section id="instructions">
       <button id="instructionButton" aria-label="Get Instruction Button">Get Instructions</button>
       <p id="instruction1"></p>
       <p id="instruction2"></p>
