Resize range buttons, remove all element borders

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -22,8 +22,8 @@
     </section>
 
     <section id="defineRange" aria-label="User input area">
-      <input type="number" class="rangeButtons" id="minRange" placeholder="MIN" aria-label="input minimum range" />
-      <input type="number" class="rangeButtons" id="maxRange" placeholder="MAX" aria-label="input maximum range"/>
+      <input type="number" class="rangeButtons" id="minRange" placeholder="Minimum" aria-label="input minimum range" />
+      <input type="number" class="rangeButtons" id="maxRange" placeholder="Maximum" aria-label="input maximum range"/>
     </section>
 
     <section id="mainGame">
