fix range buttons

--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -13,27 +13,27 @@
   <section class="wrapper">
     <main>
       <section class="instructions">
-        <button id="instructionButton" aria-label="Get Instruction Button">Get Instructions</button>
-        <p id="instruction1"></p>
-        <p id="instruction2"></p>
-        <p id="instruction3"></p>
+        <button id="instruction-button" aria-label="Get Instruction Button">Get Instructions</button>
+        <p id="instruction-1"></p>
+        <p id="instruction-2"></p>
+        <p id="instruction-3"></p>
       </section>
-      <section class="defineRange" aria-label="User input area">
-        <input type="number" class="rangeButtons" id="minRange" placeholder="Minimum" aria-label="input minimum range" />
-        <input type="number" class="rangeButtons" id="maxRange" placeholder="Maximum" aria-label="input maximum range"/>
+      <section class="define-range" aria-label="User input area">
+        <input type="number" class="range-buttons" id="min-range" placeholder="Minimum" aria-label="input minimum range" />
+        <input type="number" class="range-buttons" id="max-range" placeholder="Maximum" aria-label="input maximum range"/>
       </section>
       <section class="mainGame">
-        <input type="number" id="userGuess" placeholder="Enter your guess" aria-label="input guess" />
-        <button id="guessButton" class="submitButtons">Guess</button>
-        <button id="clearButton" class="submitButtons">Clear</button>
+        <input type="number" id="user-guess" placeholder="Enter your guess" aria-label="input guess" />
+        <button id="guess-button" class="submit-buttons">Guess</button>
+        <button id="clear-button" class="submit-buttons">Clear</button>
       </section>
-      <section class="gameResults" aria-label="game results">
-        <p id="lastGuessMessage"></p>
-        <p id="userGuessValue"></p>
-        <p id="gameResponse"></p>
+      <section class="game-results" aria-label="game results">
+        <p id="last-guess-message"></p>
+        <p id="user-guess-value"></p>
+        <p id="game-response"></p>
       </section>
       <footer>
-        <button class="submitButtons" id="resetButton" aria-label="reset game button">Reset</button>
+        <button class="submit-buttons" id="reset-button" aria-label="reset game button">Reset</button>
       </footer>
     </main>
   </section>
