--- a/numberGuesser.html
+++ b/numberGuesser.html
@@ -2,7 +2,7 @@
 
 <head>
 <title>numberGuesser</title>
-<!-- <link rel="stylesheet" href="reset.css" /> -->
+
 <link rel="stylesheet" href="numberGuesser.css" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,7 +22,7 @@
         <input type="number" class="range-buttons" id="min-range" placeholder="Minimum" aria-label="input minimum range" />
         <input type="number" class="range-buttons" id="max-range" placeholder="Maximum" aria-label="input maximum range"/>
       </section>
-      <section class="mainGame">
+      <section class="main-game">
         <input type="number" id="user-guess" placeholder="Enter your guess" aria-label="input guess" />
         <button id="guess-button" class="submit-buttons">Guess</button>
         <button id="clear-button" class="submit-buttons">Clear</button>
